--- a/FilmesWeb/Views/Filmes/Index.cshtml
+++ b/FilmesWeb/Views/Filmes/Index.cshtml
@@ -67,9 +67,9 @@
                 @Html.DisplayFor(modelItem => item.GenreID)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.MovieId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.MovieId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.MovieId })
+                <a asp-action="Edit" asp-route-id="@item.MovieId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.MovieId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.MovieId">Delete</a>
             </td>
         </tr>
 }
