--- a/FilmesWeb/Views/Filmes/Index.cshtml
+++ b/FilmesWeb/Views/Filmes/Index.cshtml
@@ -15,6 +15,14 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form asp-controller="Filmes" asp-action="Index" method="get">
+    <p>
+        Title: <input type="text" name="SearchString" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
+
 <table class="table">
     <thead>
         <tr>
